Overlay: splitter was no longer hidden by css rule; replaced with explicit JavaScript.

--- a/chrome/skin/classic/overlay.css
+++ b/chrome/skin/classic/overlay.css
@@ -28,7 +28,3 @@
  * Author: Massimiliano Mirra, <bard [at] hyperstruct [dot] net>
  *
  */
-
-#sameplace-box[collapsed="true"] + splitter {
-    display: none;
-}
